fix profile pic alignment

--- a/style.css
+++ b/style.css
@@ -56,8 +56,12 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: start;
-  gap: 250px;
+  gap: 30px;
   width: auto;
+}
+
+.bio-text {
+  width: 45%;
 }
 
 .bio-text h1 {
@@ -122,6 +126,13 @@ svg:hover {
   stroke: black;
 }
 
+.profile {
+  width: 45%;
+
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 /* https://www.w3schools.com/css/css3_images.asp */
 .profile img {
   border-radius: 5%;
@@ -130,6 +141,7 @@ svg:hover {
   */
   margin-top: 28px;
   width: 250px;
+  height: 250px;
 }
 
 .title-section {
